[project]
name = "qiskit-leaky-scheduling"
version = "0.1.0"
description = "A transpiler stage plugin that implements a custom scheduling that leaks information modifying RZ gates"
authors = [
    {name = "Iyán Méndez Veiga", email = "me@iyanmv.com"},
]
dependencies = [
    "qiskit>=1.0.0",
    "qiskit-ibm-runtime>=0.25.0",
    "qiskit-aer>=0.14.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.entry-points."qiskit.transpiler.scheduling"]
leaky_rotations = "qiskit_leaky_scheduling:LeakySchedulingPlugin"
