[project]
name = "qiskit-leaky-scheduling"
version = "0.1.1"
description = "A transpiler stage plugin that implements a custom scheduling that leaks information modifying RZ gates"
authors = [
    {name = "Iyán Méndez Veiga", email = "me@iyanmv.com"},
]
dependencies = [
    "qiskit>=1.0,<2.3",
    "qiskit-ibm-runtime>=0.25.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qiskit_leaky_scheduling = ["*.png"]

[project.entry-points."qiskit.transpiler.scheduling"]
leaky_rotations = "qiskit_leaky_scheduling:LeakySchedulingPlugin"
